[package]
name = "sampicore"
version = "0.4.0"
authors = ["Daniel Valenzuela <daniel@admetricks.com>"]
edition = "2018"
description = "🐶 Take a screenshot get a shareable URL"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/DanielVZ96/sampicore.git"
homepage = "https://github.com/DanielVZ96/sampicore"
readme = "README.md"
keywords = ["screenshot", "upload", "sam"]

[dependencies]
confy = "^0.3.1"
scrap = "0.5"
image = "^0.23.14"
directories-next = "^2.0"
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "^0.5", optional = true }
tokio = {version = "^1.0", features = ["fs"]}
rusoto_core = { version = "0.46", default_features = false }
rusoto_credential = "0.46"
rusoto_s3 = { version = "0.46", default_features = false }
rocket = "0.4.10"
arboard = "1.2.1"
minreq = { version = "2.4.1", features = ["https"] }
clap = "2.33.3"
notify-rust = "4.5.2"
piston = "0.53.0"
piston2d-opengl_graphics = "0.78.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"

[lib]
name = "sampicore"
path = "src/lib.rs"

[[bin]]
name = "sampic"
path = "src/bin.rs"

[features]
default = ["rustls"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls"]
native-tls = ["rusoto_core/native-tls", "rusoto_s3/native-tls"]
